# redsumer-rs

./: Cargo.toml
.github/workflows/: CI.yml
examples/produce-from-struct/: Cargo.toml  README.md
examples/produce-from-struct/src/: conf.rs  main.rs
redsumer-core/: Cargo.toml  README.md
redsumer-core/src/: lib.rs
redsumer-core/src/core/: client.rs  connection.rs  mod.rs  results.rs
redsumer-core/src/core/client/: models.rs
redsumer-core/src/core/connection/: sync.rs
redsumer-core/src/core/streams/: consumer.rs  producer.rs
redsumer-core/src/core/streams/consumer/: mod.rs  models.rs  sync.rs
redsumer-core/src/core/streams/producer/: models.rs  sync.rs
redsumer-rs/: Cargo.toml
redsumer-rs/src/: lib.rs
redsumer-rs/src/redsumer/: client.rs  consumer.rs  core.rs  mod.rs  producer.rs  types.rs
redsumer-rs/tests/: test_redsumer.rs  test_types.rs  test_uuid.rs
