[package]
name = "redsumer"
description = "Lightweight implementation of Redis Streams for Rust"
version = "0.5.0"
edition = "2021"
license-file = "../LICENSE"
readme = "../README.md"
keywords = [
    "redis",
    "redis_streams",
]
homepage = "https://github.com/enerBit/redsumer-rs"
repository = "https://github.com/enerBit/redsumer-rs"
documentation = "https://docs.rs/redsumer"
categories = [
    "database-implementations",
]
authors = [
    "enerBit",
    "Juan Manuel Tamayo <jmtamayog23@gmail.com>",
]

[dependencies]
redis = { git = "https://github.com/redis-rs/redis-rs", branch = "main", features = ["tokio-comp", "streams"] }
log = { version = "0.4.21" }
uuid = { version = "1.8.0", optional = true }
time = { version = "0.3.36", features = ["parsing"] }
bytes = { version = "1.6.0" }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.117" }

[dev-dependencies]
tokio = { version = "1.38.0", features = ["full"] }
num-bigint = { version = "0.4.5" }

[features]
uuid = ["dep:uuid"]