[package]
name = "redsumer"
description = "Lightweight implementation of Redis Streams for Rust"
version = "0.5.0"
edition = "2021"
license-file = "../LICENSE"
readme = "../README.md"
keywords = [
    "redis",
    "redis_streams",
]
homepage = "https://github.com/enerBit/redsumer-rs"
repository = "https://github.com/enerBit/redsumer-rs"
documentation = "https://docs.rs/redsumer"
categories = [
    "database-implementations",
]
authors = [
    "Juan Manuel Tamayo <jmtamayog23@gmail.com>",
]

[dependencies]
redis = { version = "0.25.4", features = [ "streams"] }
log = { version = "0.4.22" }

[dev-dependencies]
redis-test = { version = "0.4.0" }
